@@ -1,8 +1,10 @@
 package com.docker.backend.service.course;
 
 import com.docker.backend.dto.CourseDTO;
+import com.docker.backend.dto.EnrollmentCourseDTO;
 import com.docker.backend.entity.Course;
 import com.docker.backend.entity.user.Educator;
+import com.docker.backend.enums.Status;
 import com.docker.backend.repository.course.CourseRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -10,6 +12,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +22,19 @@ public class CourseService {
     private final CourseRepository courseRepository;
 
     public List<CourseDTO> getAllCourses() {
-        return courseRepository.findAll().stream()
-                .map(CourseDTO::new)
-                .toList();
+        return courseRepository.findAll().stream().map(course -> {
+            Educator educator = course.getEducator();
+            return new CourseDTO(
+                    course.getCourseName(),
+                    educator.getName(),
+                    course.getCategory(),
+                    course.getDifficulty(),
+                    course.getPoint(),
+                    course.getDescription(),
+                    course.getMaxEnrollment(),
+                    course.getAvailableEnrollment()
+            );
+        }).collect(Collectors.toList());
     }
 
     public List<CourseDTO> getMyCourses(Educator educator) {
